--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,12 @@ license = "MIT"
 authors = ["ccc13 <currantxx@gmail.com>"]
 edition = "2018"
 
+[workspace]
+members = [
+  "opentracing",
+  "opentracing-jaeger"
+]
+
 [dependencies]
+opentracing = { path = "opentracing" }
+opentracing-jaeger = { path = "opentracing-jaeger" }
