--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ description = "opentracing for rust"
 version = "0.1.0"
 license = "MIT"
 authors = ["ccc13 <currantxx@gmail.com>"]
+repository = "https://github.com/ccc13/opentracing-rs"
 edition = "2018"
+
+[badges]
+travis-ci = { repository = "ccc13/opentracing-rs" }
 
 [workspace]
 members = [
@@ -19,3 +23,7 @@ opentracing-jaeger = { path = "opentracing-jaeger", version = "0.1.0" }
 [dev-dependencies]
 futures = "0.1.25"
 tokio = "0.1.13"
+
+[patch.crates-io]
+opentracing = { path = "opentracing" }
+opentracing-jaeger = { path = "opentracing-jaeger" }
