--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "opentracing-jaeger"
-description = "jaeger for opentracing"
+name = "opentracing-rs-core"
+description = "opentracing"
 version = "0.1.0"
 license = "MIT"
 authors = ["ccc13 <currantxx@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+tokio = "0.1.13"
 futures = "0.1.25"
-rand = "0.6"
-
-opentracing = { path = "../opentracing" }
