--- a/jaeger/Cargo.toml
+++ b/jaeger/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "opentracing"
-description = "opentracing"
+name = "opentracing-rs-jaeger"
+description = "jaeger for opentracing"
 version = "0.1.0"
 license = "MIT"
 authors = ["ccc13 <currantxx@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-tokio = "0.1.13"
 futures = "0.1.25"
+rand = "0.6"
+
+opentracing = { path = "../opentracing" }
