--- a/jaeger/Cargo.toml
+++ b/jaeger/Cargo.toml
@@ -9,5 +9,8 @@ edition = "2018"
 [dependencies]
 futures = "0.1.25"
 rand = "0.6"
+ordered-float = "1.0.1"
+thrift = "0.0.4"
+try_from = "0.3.2"
 
 opentracing-rs-core = { path = "../core", version = "0.1.0" }
